hphp/hack/test/typecheck/genericarguments/generic_new_bad.php.exp
File "generic_new_bad.php", line 9, characters 19-20:
Invalid argument (Typing[4110])
File "generic_new_bad.php", line 9, characters 14-16:
Expected int
File "generic_new_bad.php", line 5, characters 39-39:
  via this generic T
File "generic_new_bad.php", line 8, characters 15-20:
But got string
